# hermit-tools

./: README.md
.github/workflows/: auto_voice_regions.yml
auto-voice-regions/: .gitignore  README.md  beet.yaml
auto-voice-regions/src/: config.json  main.bolt
auto_voice_regions/: CHANGELOG.md  LICENSE  README.md  beet.yaml  pyproject.toml
auto_voice_regions/src/: config.json  main.bolt  resource_generator.py  utils.py
